--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "scrapes",
-  "version": "0.1.0",
-  "description": "A set of utils that returns information from webpages.",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/node-fetch": "^2.3.2",
-    "jest": "^24.7.1",
-    "node-fetch": "^2.3.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.4"
-  }
+	"name": "scrapes",
+	"version": "0.1.0",
+	"description": "A set of utils that returns information from webpages.",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/cheerio": "^0.22.11",
+		"@types/jest": "^24.0.11",
+		"@types/node-fetch": "^2.3.2",
+		"jest": "^24.7.1",
+		"ts-jest": "^24.0.2",
+		"typescript": "^3.4.4"
+	},
+	"dependencies": {
+		"node-fetch": "^2.3.0",
+		"cheerio": "^1.0.0-rc.3"
+	}
 }
