--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,5 +65,6 @@
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "**/*.spec.ts", "src/**/*.test.ts"],
-	"compileOnSave": true
+	"compileOnSave": true,
+	"resolveJsonModule": true
 }
