--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
 	"main": "dist/app.js",
 	"bin": "dist/app.js",
 	"files": [
-		"./dist/**/*"
+		"dist/**/*"
 	],
 	"scripts": {
 		"test": "jest",
 		"build": "tsc && npm install -g"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [
+		"dom",
+		"html",
+		"scrape",
+		"scraper"
+	],
+	"author": "Shaun Bulbrook",
 	"license": "ISC",
 	"devDependencies": {
 		"@types/cheerio": "^0.22.11",
