--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.4
 jobs:
   build:
     docker:
@@ -35,3 +37,5 @@ jobs:
 
       # run tests!
       - run: npm run test
+
+      - run: npm install codecov && ./node_modules/.bin/codecov --token="b0d9a908-4d6d-4290-a4c9-c42c88408743"
