Set up new files + tests for the executables

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"url": "https://github.com/ShaunBulbrook/scrapes/issues"
 	},
 	"main": "dist/app.js",
-	"bin": "dist/app.js",
+	"bin": "dist/cmd.js",
 	"files": [
 		"dist/**/*"
 	],
