--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	],
 	"scripts": {
 		"test": "jest",
-		"build": "tsc && npm install -g"
+		"build": "tsc && npm install -g && npm run make",
+		"transform": "babel --plugins transform-es2015-modules-commonjs ./dist/ -d ./dist/"
 	},
 	"keywords": [
 		"dom",
@@ -24,10 +25,13 @@
 	"author": "Shaun Bulbrook",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/cli": "^7.4.4",
+		"@babel/core": "^7.4.4",
 		"@types/cheerio": "^0.22.11",
 		"@types/commander": "^2.12.2",
 		"@types/jest": "^24.0.11",
 		"@types/node-fetch": "^2.3.2",
+		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
 		"jest": "^24.7.1",
 		"ts-jest": "^24.0.2",
 		"typescript": "^3.4.4"
