--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	],
 	"scripts": {
 		"test": "jest",
-		"build": "tsc && npm install -g && npm run make",
+		"build": "tsc",
 		"transform": "babel --plugins transform-es2015-modules-commonjs ./dist/ -d ./dist/"
 	},
 	"keywords": [
